# Heimdall

./: .gitignore  pyproject.toml
heimdall/: __main__.py
heimdall/agent/: research_agent.py  tools.py
heimdall/config/: agent_model.py  agent_prompt.py
heimdall/pipeline/: runner.py
heimdall/schemas/: schemas.py
signalrun/agent/: tools.py
signalrun/pipeline/: topics.py
signalrun/schemas/: schemas.py
