[project]
name = "heimdall"
version = "0.1.0"
description = "Tech news collector agent"
authors = [
    {name = "hendrix",email = "darnellharrisjohnson@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "psycopg (>=3.3.3,<4.0.0)",
    "pydantic (>=2.13.3,<3.0.0)",
    "langchain (>=1.2.15,<2.0.0)",
    "langchain-openai (>=1.2.0,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "feedparser (>=6.0.12,<7.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "structlog (>=25.5.0,<26.0.0)",
    "trafilatura (>=2.0.0,<3.0.0)"
]

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "ruff (>=0.15.11,<0.16.0)",
    "mypy (>=1.20.2,<2.0.0)",
    "pre-commit (>=4.6.0,<5.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
